<?xml version="1.0"?>
<package format="3">
  <name>servo_control</name>
  <version>0.0.0</version>
  <description>Package for servo control, dynamic TF broadcasting, and LiDAR pointcloud conversion nodes.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <!-- Build and execution dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>laser_geometry</depend>
  <depend>tf2_sensor_msgs</depend>
 
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
